Added clarifications and a note about using additional files.

--- a/lab05/lab05.ipynb
+++ b/lab05/lab05.ipynb
@@ -18,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 5: Visualizations and Comparisons\n",
+    "#### Lab 5: Visualizations and Comparisons\n",
     "\n",
     "Welcome to lab 5! This week, we will go over creating various visualizations and using conditional statements.\n",
     "\n",
     "The relevant sections in the books are\n",
-    "* Chapter 6 for computing proportionsm\n",
+    "* [Chapter 6](https://www.inferentialthinking.com/chapters/06/4/Example_Gender_Ratio_in_the_US_Population.html) for computing proportions\n",
     "* [Chapter 7](https://www.inferentialthinking.com/chapters/07/Visualization.html) for `barh` and `hist`, \n",
     "* [Section 8.2](https://www.inferentialthinking.com/chapters/08/2/Classifying_by_One_Variable.html) for `group`\n",
     "\n",
@@ -200,7 +200,7 @@
     "\n",
     "Since we want to end up with 13 columns (one for the state and one for each of the election year from 1972 to 2016), we can extract the first and the last 14 columns of the table and then remove the columns \"Unnamed: 60\" and \"State.1\". We should also remove the weird symbol in the \"2000\" and \"2016\" columns to make it easier to work with the columns.\n",
     "\n",
-    "Let's do this in stages:\n",
+    "Let's do this in stages, saving each intermediate step into different variables:\n",
     "1. to extract the last $K$ columns, let's go ahead and drop the first $N$ columns, skipping the first one (where $K=14$ and $N=66-K-1 = 51$);\n",
     "1. drop the column `'Unnamed: 60'` and the `'State.1'`;\n",
     "1. rename the `'2000 ‡'` and `'2016 ‡'` columns to remove the non-numerical symbol.\n",
@@ -209,6 +209,8 @@
     "### 1.2.1: `drop` unnecessary columns (step 1)\n",
     "\n",
     "As always, we recommend referring to the documentation if you don't remember how to use the [`drop` method](http://data8.org/datascience/_autosummary/datascience.tables.Table.drop.html#datascience.tables.Table.drop) with the tables. Note that in the documentation it says that `drop` has a parameter `column_or_columns`, which must be an existing header name, or a valid column index.\n",
+    "\n",
+    "First, let's just get the indices of columns that we want to drop. We'll use them in the next step as an input into the `drop` method.\n",
     "\n",
     "Since it is too tedious to list the columns by name, let's use the fact that we can give it a list with the column indices. Let's use `np.arange` to generate the indices of the 51 columns: we want to start from the second column (to preserve the first,\"State\", column), i.e., our indices start at 1 and go up to 51.\n",
     "\n",
@@ -727,7 +729,13 @@
     "\n",
     "This is an optional section which gives you a chance to experiment with the data and the methods. We will take a look at what you did here, and if you had interesting questions that you were able to ask and answer, we will award extra points for your explorations.\n",
     "\n",
-    "We recommend for you to finish the lab and then come back to this section. Feel free to use the `Insert` menu above to add extra cells. Remember to include a Markdown cell in which you write down the question(s) you are attempting to answer with your code.\n",
+    "We recommend for you to finish the lab and then come back to this section. Feel free to use the `Insert` menu above to add extra cells. Remember to include a Markdown cell in which you write down the question(s) that you are attempting to answer with your code.\n",
+    "\n",
+    "If you decide to (go above and beyond, and) use additional datasets, you definitely may include them in your analysis. Make sure you do the following:\n",
+    "* include the URL for the source of the data\n",
+    "* explain why you needed it / what part of the data you want to use\n",
+    "* if the data needed cleaning but the steps to clean the data are not in the notebook, describe what you did to clean the columns/rows.\n",
+    "* submit the additional CSV file with your notebook to Gradescope.\n",
     "\n",
     "Have fun!\n",
     "\n",
@@ -1344,8 +1352,15 @@
     "- go up to the `Kernel` menu and select `Restart & Clear Output` (make sure the notebook is saved first, because otherwise, you will lose all your work!). \n",
     "* go to `Cell -> Run All`. Carefully look through your notebook and verify that all computations execute correctly. You should see **no errors**; if there are any errors, make sure to correct them before you submit the notebook.\n",
     "* go to `File -> Download as -> Notebook` and download the notebook to your own computer. ([Please verify](https://ucsb-ds.github.io/ds1-f20/troubleshooting/#i-downloaded-the-notebook-file-but-it-saves-as-the-ipynbjson-extension-so-whenever-i-upload-it-to-gradescope-it-fails) that it got saved as an .ipynb file.)\n",
-    "* Upload the notebook to [Gradescope](https://www.gradescope.com/).\n"
+    "* Upload the notebook to [Gradescope](https://www.gradescope.com/). **If you used additional CSV files, remember to upload them with your notebook.** You can drag and drop both files or hold down Ctrl to click on multiple files when you are uploading them.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1421,7 +1436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
