--- a/lab06/lab06_main.ipynb
+++ b/lab06/lab06_main.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 6: Group, Join, Conditionals, Iteration, Randomness. "
+    "# Lab 6: Group, Join, Conditionals, Randomness. "
    ]
   },
   {
