--- a/lab06/lab06_main.ipynb
+++ b/lab06/lab06_main.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "*Hint 2:* A vote is valid if and only if the participant chose a single first choice artist, a single second choice artist, and a single third choice artist. That means in the table returned by the `group` method, a vote is valid if and only if its rank list is one of `[1, 2, 3]`, `[1, 3, 2]`, ..., `[3, 1, 2]`, i.e., any permutation of `[1, 2, 3]`.\n",
     "\n",
-    "*Hint 3:* Since, it's kind of tedious to compare with a vote's rank list with each permutation, sort the data in some fashion before using the `group` method so that each student who voted correctly has a rank list that looks like `[1, 2, 3]`. (`are.not_equal_to` might be helpful here.)\n",
+    "*Hint 3:* Since, it's kind of tedious to compare with a vote's rank list with each permutation, sort the data in some fashion before using the `group` method so that each student who voted correctly has a rank list that looks like `[1, 2, 3]` (note: this is a _list_, so don't use the `make_array` or turn it into a string). Consider using `are.not_equal_to`.\n",
     "\n",
     "*Note:* If you are getting `SyntaxWarning: Do not pass an array or list to a predicate. ...`, don't worry about it. You can ignore it in this question.\n",
     "\n",
