Correction in the Results rubric

--- a/project1-classification/ds1-project1.ipynb
+++ b/project1-classification/ds1-project1.ipynb
@@ -268,8 +268,8 @@
     "  + Correctly set up the classification, trained, tested, and evaluated the classifier.\n",
     "  \n",
     "  \n",
-    "- **Results (30 pts)**\n",
-    "  + Appropriate analysis and the interpretation of the results (e.g., correct interpretation of PCA, regression, etc). If appropriate, addressed the ethical issues regarding the analysis.\n",
+    "- **Results (10 pts)**\n",
+    "  + Appropriate analysis and the interpretation of the results. If appropriate, addressed the ethical issues regarding the analysis.\n",
     "  \n",
     "  \n",
     "- **Conclusions (10 pts)**\n",
