A note about adding a project partner to Gradescope

--- a/project1-classification/ds1-project1.ipynb
+++ b/project1-classification/ds1-project1.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "## Submission\n",
     "\n",
-    "You are required to submit the following files to Gradescope:\n",
+    "You are required to submit the following files to Gradescope **after you add your project partner to the submission** (if applicable):\n",
     "\n",
     "1.  Submit a complete jupyter notebook with all of your analyses.  (You can use this jupyter notebook as a template: remove the instructions, replacing them with your analysis).  **We should be able to reproduce _all_ your results and visualizations by running your notebook.**\n",
     "\n",
