removed the reference to the report

--- a/project1-classification/ds1-project1.ipynb
+++ b/project1-classification/ds1-project1.ipynb
@@ -280,7 +280,7 @@
     "- **Overall impression (15 pts)**\n",
     "  + **(5 pts)** General coherence, clarity, sufficient referencing and overall effort. \n",
     "  + **(5 pts)** Include references for **any and all resources** used for your project that are outside the scope of what we used in this class: data sources, books, journal papers, online resources (which include similar project/analysis done by others), etc.  _Failure to cite your references can be grounds for an academic integrity violation case._ Make sure that you read and follow the policies regarding Academic Integrity: https://studentconduct.sa.ucsb.edu/academic-integrity. The Office of Student Conduct lists actions considered to be plagiarism, cheating, or other forms of academic theft, and students’ responsibilities. You are required to read the policies and to abide by them.\n",
-    "  + **(5 pts)** Python notebook runs without errors, using only the material that we used in this class (or is listed in our textbook).  _More points can be deducted if the notebook does not comply to the provided format, if there is a lack of evidence of sufficient work, or if the results presented in the report cannot be reproduced using the notebook._"
+    "  + **(5 pts)** Python notebook runs without errors, using only the material that we used in this class (or is listed in our textbook).  _More points can be deducted if the notebook does not comply to the provided format, if there is a lack of evidence of sufficient work, or if the results cannot be reproduced using the notebook._"
    ]
   },
   {
