removed the references to the report

--- a/project1-classification/ds1-project1.ipynb
+++ b/project1-classification/ds1-project1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Draft due: Wednesday Dec 2, by the start of your lab.\n",
     "* Submit all files to Gradescope. Each section should have some attempt in it.\n",
-    "* One or both partners should be in lab, prepared to present/discuss the report with the mentors/classmates.\n",
+    "* One or both partners should be in lab, prepared to present/discuss the project with the mentors/classmates.\n",
     "\n",
     "## Due Date:  Friday Dec 4, 9PM\n",
     "* Final project files are due on Gradescope."
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Final Project Report Structure\n",
+    "# The Project Structure\n",
     "\n",
     "Each group submits **one** project notebook -- if you are working in a pair, **make sure to add your partner to your group on Gradescope**.\n",
     "\n",
